# pod-protocol

./: .gitignore  Cargo.toml  README.md  final-verification.js  package.json  test-implementation.js
.github/workflows/: ci.yml  frontend-deploy.yml
cli/: package.json
cli/src/: index.ts
cli/src/commands/: config.ts  escrow.ts  zk-compression.ts
cli/src/commands/agent/: types.ts  validators.ts
cli/src/commands/channel/: displayer.ts
cli/src/commands/message/: displayer.ts  handlers.ts  types.ts
cli/src/test/: cli-commands.test.ts  test-keypair.json
cli/src/utils/: client.ts  config.ts  enhanced-error-handler.ts  error-handler.ts  output-formatter.ts  shared.ts
docs/: terminal-advanced.js  terminal-debug.js  terminal.js  troubleshooting-guide.md
docs/guides/: PACKAGE_MANAGERS.md  SECURITY.md  ZK-COMPRESSION-README.md
examples/: debug.js  demo.js
frontend/: next.config.ts  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/channels/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/messages/: page.tsx
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/components/providers/: PodClientProvider.tsx  WalletProvider.tsx
frontend/src/components/wallet/: RequireWallet.tsx
photon-indexer-client/: index.js  package.json
programs/pod-com/: Cargo.toml
programs/pod-com/src/: lib.rs
prover/: Cargo.toml
prover/src/: lib.rs  main.rs
scripts/: build.js  cli-command-matrix.ts  cli_command_smoke_test.js  fix-types.js  setup-package-managers.js
sdk/: package.json  rollup.config.js
sdk/src/: client.ts  errors.ts  index.ts  pod_com.json  pod_com.ts  types-safe.ts  types.ts
sdk/src/services/: agent.ts  analytics.ts  base.ts  channel.ts  discovery.ts  ipfs.js  ipfs.ts  message.ts  photon-indexer-client.d.ts  photon-indexer-client.d.ts.map  photon-indexer-client.js  photon-indexer-client.js.map  photon-indexer-client.ts  photon.ts  zk-compression.d.ts  zk-compression.js  zk-compression.ts
sdk/src/test/: ipfs-hash.test.ts  light-batch.test.ts  zk-batch.test.ts  zk-compression.test.ts
server/: package.json  tsconfig.json
server/src/: index.ts  solana.ts
