[workspace]
members = [
    "programs/*",
    "prover"
]
resolver = "2"

[workspace.dependencies]
zeroize = "=1.3.0"

[patch.crates-io]
zeroize = { git = "https://github.com/iqlusioninc/crates", tag = "zeroize/v1.3.0" }



[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
