[package]
name = "pod-prover"
edition = "2021"
rust-version = "1.86"

[dependencies]
ark-ff = "0.5.0"
ark-relations = "0.5.1"
ark-std = { version = "0.5.0", default-features = false }
ark-snark = "0.5.0"
ark-groth16 = "0.5.0"
halo2_proofs = { version = "0.3.0", features = ["multicore","beta"], default-features = false }
plonky2 = "1.0.0"
nova-snark = "0.41.0"
zeroize = "1.3.0"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.31.0", features = ["full"] }
ark-bn254 = "0.5.0"
