[package]
name = "pod-com"
version = "0.1.0"
description = "PoD Protocol (Prompt or Die): AI Agent Communication Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pod_com"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
no-log-ix-name = []

[dependencies]
# Core dependencies
anchor-lang = { version = "=0.30.1", default-features = false, features = ["init-if-needed"] }

# Remove solana-program to use anchor-lang exported version
# solana-program = { version = "=1.18.22", default-features = false }

# Light Protocol ZK Compression dependencies - Temporarily commented out for base build
# light-compressed-token = { version = "2.0.0", default-features = false }
# light-system-program = { version = "1.2.0", default-features = false }
# light-hasher = { version = "3.1.0", default-features = false }
# light-utils = { version = "1.1.0", default-features = false }
# light-macros = { version = "2.1.0", default-features = false }

# Keep SHA2 for fallback hashing
sha2 = { version = "0.10", default-features = false }

# Spl dependencies (commented out as they're optional)
# spl-token = { version = "=4.0.0", optional = true, default-features = false }
# spl-associated-token-account = { version = "=2.0.0", optional = true, default-features = false }

# Serialization - using the one from anchor-lang to avoid conflicts
# borsh = { version = "=1.5.7" }
# borsh-derive = "=0.10.3"

# Error handling
thiserror = "=2.0.12"

# Force compatible zeroize version (removed due to conflicts)
# zeroize = { workspace = true }

# Explicitly disable any features that might pull in getrandom/rand
[package.metadata.docs.rs]
all-features = false
no-default-features = true

[dev-dependencies]
anchor-lang = { version = "=0.30.1", features = ["derive"] }
# Test dependencies can be added here if needed
